// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transforms \`declare const enum\` 1`] = `
"const MyEnum = {
  A: 1,
  B: 1,
  C: \\"\\",
  D: \\"\\",
  E: 1,
  F: 2
};"
`;

exports[`Transforms chained computed members 1`] = `
"const MyEnum = {
  A: 1,
  B: 2,
  C: 3,
  D: 3,
  E: 9,
  F: 10,
  G: 90,
  H: 91,
  I: 95420416
};"
`;

exports[`Transforms computed members 1`] = `
"const MyEnum = {
  A: 1,
  B: 1,
  C: 2,
  D: 2,
  E: 1,
  F: 2,
  G: 1,
  H: 1,
  I: 1048576
};"
`;

exports[`Transforms no initializers 1`] = `
"const Direction = {
  Left: 0,
  Right: 1,
  Down: 2,
  Up: 3
};
;"
`;

exports[`Transforms string literal properties 1`] = `
"const MyEnum = {
  \\"A\\": 1,
  \\"B\\": 2,
  \\"C D\\": 3,
  \\"E F\\": 4
};"
`;

exports[`Transforms string members 1`] = `
"const MyEnum = {
  A: 1,
  B: 1,
  C: \\"\\",
  D: \\"\\",
  E: 1,
  F: 2
};"
`;
